# woundnurse_differential

./: .replit  Agents.md  INSTRUCTIONS.md  Q&A.md  RecProducts.md  WhyClassification.md  YOLO_SETUP_COMPLETE.md  add_test_images.py  balanced_dataset_organizer.py  body_map_processor.py  check_training_status.py  cleanup_training_data.py  debug_yolo_detector.py  deploy_custom_model.py  detailed_case_analysis_2025_07_08_782.md  emergency_checkpoint.pth  enhanced_wound_detection_cnn.py  enhanced_yolo_training.py  ensemble_wound_models.py  extract_products.py  model_evaluator.py  monitor_training.py  organize_training_data.py  package-lock.json  package.json  persistent_trainer.py  pyproject.toml  quick_ensemble.py  quick_wound_trainer.py  rapid_model_trainer.py  reorganize_dataset.py  replit.md  run_yolo_test.py  seed-wound-types.js  setup_dataset.py  simple_wound_trainer.py  start_yolo_service.sh  test_full_yolo_system.py  test_pressure_ulcer.py  test_product_integration.js  (+11 more)
attached_assets/: Pasted--Awesome-Here-s-a-designed-integration-plan-for-how-those-critical-wound-care-questions-can-fe-1751172694981_1751172694981.txt  Pasted-Based-on-the-answers-you-have-provided-to-these-key-questions-a-clinician-would-be-able-to-make-a-d-1752214250920_1752214250921.txt  Pasted-Here-s-your-final-polished-PRD-clear-professional-and-implementation-ready-for-your-AI-wound-1751171859504_1751171859506.txt  dataset_1751958394221.yaml
server/: auth.ts  customAuth.ts  index.ts  replitAuth.ts  routes-original.ts  routes.ts  storage.ts
shared/: schema.ts
to_delete/: DEPLOYMENT_GUIDE.md  (+6 more)
(+118 files in other folders)
